# smart-home

./: .gitignore  README.md  deploy-to-pi.sh  docker-compose-armv7.yml  docker-compose.yml  init_db.sh  init_dev_db.sh  run.sh  transfer.sh
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  frontend.yml  raspi-rust-api.yml
frontend/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  README.md  build.sh  components.json  deploy.sh  package-lock.json  package.json  remix.config.js  run.sh  tailwind.config.js  transfer-image.sh
frontend/app/: context.tsx  createEmotionCache.ts  entry.client.tsx  entry.server.tsx  root.tsx  routes.ts  sessions.server.tsx  tailwind.css
frontend/app/components/: button-group.tsx  consumptionGraph.tsx  datePicker.tsx  error.tsx  frontPageRooms.tsx  header.tsx  layout.tsx  liveConsumptionGraph.tsx  nav.tsx  pageLinks.tsx  refreshPageButton.tsx  styledFirebaseAuth.tsx  themePicker.tsx
frontend/app/fetcher/: apiRoutes.ts  fetcher.server.ts
frontend/app/hooks/: useSubmissionStatus.ts
frontend/app/routes/: home.tsx  (+15 more)
raspi-rust-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.armv7  Dockerfile.macos  README.md  build-and-push.sh  build.sh  configuration.yaml  run.sh  sqlx-data.json
raspi-rust-api/configuration/: base.yaml  dev.yaml  production.yaml
raspi-rust-api/db/migrations/: 20221017211359_create_plugs_table.sql  20221020122637_create_initial_tables.sql  20221105112022_schedule_rework.sql  20221107185127_prices.sql  20221111220433_notification_settings.sql  20221120113317_temp_sensors.sql  20221121211624_temp_sensors_battery.sql  20221122191609_room_min_temp.sql  20221206143322_temp_action_degrees.sql  20230204144756_buttons.sql  20230205100054_plugs_scheduled.sql  20230228132215_temp_action_start_time.sql
raspi-rust-api/src/: api.rs  clients.rs  configuration.rs  cron_scheduler.rs  db.rs  domain.rs  firebase_db.rs  firestore.rs  lib.rs  looper.rs  main.rs  observability.rs  plugs.rs  prices.rs  routes.rs  scheduling.rs  service.rs  shelly_client.rs  work_handler.rs
raspi-rust-api/src/clients/: mqtt.rs  ntfy.rs  shelly_client.rs  tibber_client.rs  tibber_subscriber.rs
raspi-rust-api/src/db/: buttons.rs  notification_settings.rs  plugs.rs  prices.rs  rooms.rs  schedules.rs  temp_actions.rs  temp_sensors.rs  temperature_logs.rs
raspi-rust-api/src/routes/: buttons.rs  lib.rs  notification_settings.rs  plugs.rs  prices.rs  rooms.rs  schedules.rs  temp_actions.rs  temp_sensors.rs  temperature_logs.rs
raspi-rust-api/src/service/: consumption_cache.rs  notifications.rs  plugs.rs  prices.rs  scheduling.rs  temperature_logs.rs
raspi-rust-api/tests/: api.rs  config.rs  configuration.rs  db.rs  integration.rs  setup.rs  work_handler.rs
(+61 files in other folders)
