[package]
name = "rust_home"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tower = "0.4.13"
chrono = {version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
env_logger = "0.9"
log = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tibber = "0.4"
tokio = { version = "1.26", features = ["time", "macros", "signal"] }
config = "0.13"
uuid = {version ="1.2", features = ["v4", "serde"] }
anyhow = "1.0"
serde-aux = "4.0"
bigdecimal = "0.3"
itertools = "0.10"
async-tungstenite = { version = "0.18.0", features = ["tokio-runtime", "tokio-native-tls"] }
rumqttc = "0.17"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "migrate",
    "ipnetwork",
    "offline",
    "bigdecimal",
    "chrono",
]

[dev-dependencies]
testcontainers = "0.14"
wiremock = "0.5"
fake = "2.5"
rand = "0.8"
